force-app/main/default/objects/Case/fields/Is_WorkForcePlanner_notified__c.field-meta.xml
<CustomField>
    <fullName>Is_WorkForcePlanner_notified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is WorkForcePlanner notified ?</label>
    <type>Checkbox</type>
</CustomField>