force-app/main/default/objects/Case/fields/WFM_Service_Invocation_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>WFM_Service_Invocation_Timestamp__c</fullName>
    <label>WFM Service Invocation Timestamp</label>
    <type>DateTime</type>
</CustomField>