force-app/main/default/objects/Case/fields/Workforce_Planning_Error__c.field-meta.xml
<CustomField>
    <fullName>Workforce_Planning_Error__c</fullName>
    <label>Workforce Planning Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>